Fix: List Page: centeralize spinner on mobile screen

--- a/src/pages/feedbacks/ListPage/style.scss
+++ b/src/pages/feedbacks/ListPage/style.scss
@@ -11,7 +11,7 @@
   }
   &__spinner {
     position: absolute;
-    left: 50vh;
+    left: 50%;
     top: 25vh;
     transform: translate(-50%, 0);
     z-index: 999;
